[package]
name = "manga-avif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.7", default-features = false, features = [
  "jpeg",
  "png",
  "webp",
] }
infer = "0.15.0"
pico-args = "0.5.0"
ravif = "0.11.3"
rayon = "1.8.0"
rgb = "0.8.37"
#ureq = "2.9.1"
walkdir = "2.4.0"
zip = { version = "0.6.6", default-features = false }
